<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginBottom="8dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"/>

    <EditText
        android:id="@+id/et_name"
        android:layout_below="@+id/iv"
        android:hint="@string/name"
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_lbl_code_type"
        android:text="@string/code_type"
        android:labelFor="@id/et_code_type"
        android:layout_below="@id/et_name"
        android:layout_marginStart="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/et_code_type"
        android:layout_below="@id/tv_lbl_code_type"
        android:focusable="false"
        android:layout_width="128dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_lbl_code"
        android:layout_alignBaseline="@id/tv_lbl_code_type"
        android:layout_toEndOf="@id/et_code_type"
        android:layout_marginStart="16dp"
        android:labelFor="@id/et_code"
        android:text="@string/code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/et_code"
        android:layout_below="@id/tv_lbl_code"
        android:layout_toEndOf="@id/et_code_type"
        android:layout_marginStart="8dp"
        android:focusable="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_lbl_rating"
        android:text="@string/rating"
        android:labelFor="@id/sb_rating"
        android:layout_below="@id/et_code_type"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <SeekBar
        android:id="@+id/sb_rating"
        android:layout_below="@id/tv_lbl_rating"
        android:layout_marginTop="8dp"
        android:max="100"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/et_description"
        android:layout_below="@id/sb_rating"
        android:layout_marginTop="8dp"
        android:hint="@string/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_cancel"
        android:text="@string/cancel"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/et_description"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_ok"
        android:text="@string/ok"
        android:layout_alignBaseline="@id/btn_cancel"
        android:layout_toStartOf="@id/btn_cancel"
        android:layout_marginEnd="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</RelativeLayout>