<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <EditText
        android:id="@+id/et_category_name"
        android:inputType="text"
        android:hint="@string/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_cancel"
        android:text="@string/cancel"
        android:layout_below="@id/et_category_name"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_ok"
        android:layout_alignBaseline="@id/btn_cancel"
        android:layout_toStartOf="@id/btn_cancel"
        android:layout_marginEnd="16dp"
        android:text="@string/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>